Add placeholder into blog section

--- a/homePage.html
+++ b/homePage.html
@@ -6,7 +6,7 @@
     <title>BioVitalAge®</title>
     <link rel="shortcut icon" href="/BioVitalyAge-Website/includes/images/icone/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="componenti.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="homePage.css">
     
 
     <!-- Bootstrap -->
@@ -525,18 +525,22 @@
                                     <div class="container-icon-blog">
                                         <img src="includes/images/icone/autore.png" alt="Autore Icon">
                                     </div>
-                                    <p>By Nome Autore</p>
+                                    <p>Dott.ssa Elisa Romano</p>
                                 </div>
                                 <div class="Container-Data">
                                     <div class="container-icon-blog">
                                         <img src="includes/images/icone/data.png" alt="Data Icon">
                                     </div>
-                                    <p>22, Ottobre 2024</p>
+                                    <p>20, Giugno 2025</p>
                                 </div>
                             </div>
-                            <h3>Titolo Blog</h3>
-                            <p>Piccola Descrizione del blog che va a dare un accenno a quel che sarà il contenuto del più recente blog caricato sul sito. Questo sarà il blog che cadrà più facilmente all'occhio dell'utente.</p>
-                            <button class="arrow-button">Leggi di più</button>
+                            <h3>Assistenza Sanitaria Intelligente: Quando la Tecnologia Incontra l’Umano</h3>
+                            <p class="line-clamp"> Nel mondo della medicina moderna, l’innovazione non si limita più ai farmaci o alle tecniche chirurgiche: oggi è la
+                                tecnologia digitale a ridefinire il modo in cui ci prendiamo cura della nostra salute. Dall’intelligenza artificiale
+                                nei processi diagnostici alle piattaforme di monitoraggio remoto dei pazienti, l’assistenza sanitaria diventa sempre
+                                più intelligente, personalizzata ed efficiente. In questo blog approfondiamo le nuove frontiere della sanità
+                                digitale, analizzando strumenti concreti già utilizzati nelle cliniche più avanzate e il loro impatto reale sulla
+                                qualità della vita dei pazienti.</p>
                         </div>
                     </div>
                 </div>
@@ -545,7 +549,34 @@
 
                     <div class="card-item">
                         <div class="card-image">
-                            <img class="scale-img" src="https://uiparadox.co.uk/templates/nova-care/assets/media/blog/blog-1.png" alt="">
+                            <img class="scale-img"
+                                src="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                alt="">
+                        </div>
+                        <div class="card-descrizione p-4">
+                            <div class="autore-description d-flex justify-content-between align-items-center">
+                                <div class="Container-autore d-flex">
+                                    <div class="container-icon-blog">
+                                        <img src="includes/images/icone/autore.png" alt="Autore Icon">
+                                    </div>
+                                    <p>Dott. Luca Ferri</p>
+                                </div>
+                                <div class="Container-Data d-flex">
+                                    <div class="container-icon-blog">
+                                        <img src="includes/images/icone/data.png" alt="Data Icon">
+                                    </div>
+                                    <p>16, Giugno 2025</p>
+                                </div>
+                            </div>
+                            <h3>Titolo Blog</h3>
+                            <p>Piccola Descrizione del blog che va a dare un accenno a quel che sarà il contenuto</p>
+                            <button class="arrow-button">Leggi di più</button>
+                        </div>
+                    </div>
+
+                    <div class="card-item">
+                        <div class="card-image">
+                            <img class="scale-img" src="https://images.unsplash.com/photo-1527613426441-4da17471b66d?q=80&w=1152&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                         </div>
                         <div class="card-descrizione p-4">
                             <div class="autore-description d-flex justify-content-between align-items-center">
@@ -570,32 +601,7 @@
 
                     <div class="card-item">
                         <div class="card-image">
-                            <img class="scale-img" src="https://uiparadox.co.uk/templates/nova-care/assets/media/blog/blog-1.png" alt="">
-                        </div>
-                        <div class="card-descrizione p-4">
-                            <div class="autore-description d-flex justify-content-between align-items-center">
-                                <div class="Container-autore d-flex">
-                                    <div class="container-icon-blog">
-                                        <img src="includes/images/icone/autore.png" alt="Autore Icon">
-                                    </div>
-                                    <p>By Nome Autore</p>
-                                </div>
-                                <div class="Container-Data d-flex">
-                                    <div class="container-icon-blog">
-                                        <img src="includes/images/icone/data.png" alt="Data Icon">
-                                    </div>
-                                    <p>22, Ottobre 2024</p>
-                                </div>
-                            </div>
-                            <h3>Titolo Blog</h3>
-                            <p>Piccola Descrizione del blog che va a dare un accenno a quel che sarà il contenuto</p>
-                            <button class="arrow-button">Leggi di più</button>
-                        </div>
-                    </div>
-
-                    <div class="card-item">
-                        <div class="card-image">
-                            <img class="scale-img" src="https://uiparadox.co.uk/templates/nova-care/assets/media/blog/blog-1.png" alt="">
+                            <img class="scale-img" src="https://images.unsplash.com/photo-1538333702852-c1b7a2a93001?q=80&w=1172&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                         </div>
                         <div class="card-descrizione p-4">
                             <div class="autore-description d-flex justify-content-between align-items-center">
