--- a/url/Collaborazioni/collaborazioni.html
+++ b/url/Collaborazioni/collaborazioni.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BVA - Società</title>
-    <link rel="stylesheet" href="corporation.css">
+    <link rel="stylesheet" href="collaborazioni.css">
     <link rel="shortcut icon" href="/BioVitalyAge-Website/includes/images/icone/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../../componenti.css">
 
@@ -36,7 +36,7 @@
     
             <div class="Home_Section-tittle">
                 <div class="backdrop"></div>
-                <h3>Our Customers</h3>
+                <h3>Collaborazioni</h3>
             </div>
 
             <div class="col-12 col-md-12 col-xxl-10 col-lg-12 p-xxl-5 d-flex contenitore-presentazione">
