--- a/url/Innovation/innovation.html
+++ b/url/Innovation/innovation.html
@@ -82,11 +82,15 @@
                 <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/autore.png" alt="Icon Autore" width="25px" height="25px">
+                            </div>
                             <p>By Nome Autore</p>
                         </div>
                         <div class="Container-Data d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/data.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/data.png" alt="Icon Data" width="25px" height="25px">
+                            </div>
                             <p>22, Ottobre 2024</p>
                         </div>
                     </div>
@@ -103,11 +107,15 @@
                 <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/autore.png" alt="Icon Autore" width="25px" height="25px">
+                            </div>
                             <p>By Nome Autore</p>
                         </div>
                         <div class="Container-Data d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/data.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/data.png" alt="Icon Data" width="25px" height="25px">
+                            </div>
                             <p>22, Ottobre 2024</p>
                         </div>
                     </div>
@@ -124,11 +132,15 @@
                 <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/autore.png" alt="Icon Autore" width="25px" height="25px">
+                            </div>
                             <p>By Nome Autore</p>
                         </div>
                         <div class="Container-Data d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/data.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/data.png" alt="Icon Data" width="25px" height="25px">
+                            </div>
                             <p>22, Ottobre 2024</p>
                         </div>
                     </div>
@@ -148,11 +160,15 @@
                 <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/autore.png" alt="Icon Autore" width="25px" height="25px">
+                            </div>
                             <p>By Nome Autore</p>
                         </div>
                         <div class="Container-Data d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/data.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/data.png" alt="Icon Data" width="25px" height="25px">
+                            </div>
                             <p>22, Ottobre 2024</p>
                         </div>
                     </div>
@@ -169,11 +185,15 @@
                 <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/autore.png" alt="Icon Autore" width="25px" height="25px">
+                            </div>
                             <p>By Nome Autore</p>
                         </div>
                         <div class="Container-Data d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/data.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/data.png" alt="Icon Data" width="25px" height="25px">
+                            </div>
                             <p>22, Ottobre 2024</p>
                         </div>
                     </div>
@@ -190,11 +210,15 @@
                 <div class="card-descrizione p-3 p-lg-5">
                     <div class="autore-description d-flex justify-content-between align-items-center">
                         <div class="Container-autore d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/autore.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/autore.png" alt="Icon Autore" width="25px" height="25px">
+                            </div>
                             <p>By Nome Autore</p>
                         </div>
                         <div class="Container-Data d-flex" style="gap:5px">
-                            <img src="../../includes/images/icone/data.png" alt="" width="20px" height="20px">
+                            <div>
+                                <img src="../../includes/images/icone/data.png" alt="Icon Data" width="25px" height="25px">
+                            </div>
                             <p>22, Ottobre 2024</p>
                         </div>
                     </div>
