--- a/url/About/about.html
+++ b/url/About/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BVA - Industrie</title>
-    <link rel="stylesheet" href="industries.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="shortcut icon" href="/BioVitalyAge-Website/includes/images/icone/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../../componenti.css">
 
@@ -36,7 +36,7 @@
 
         <div class="Home_Section-tittle">
             <div class="backdrop"></div>
-            <h3>About us</h3>
+            <h3>Chi Siamo</h3>
         </div>  
 
         <div class="contenitore-video">
