Add subsection into clock section

--- a/url/Collaborazioni/collaborazioni.html
+++ b/url/Collaborazioni/collaborazioni.html
@@ -71,7 +71,9 @@
                             <p>Nome azienda</p>
                             <button class="arrow-button">Scopri di più</button>
                         </div>
-                        <img src="https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr" alt="">
+                        <div>
+                            <img src="https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr" alt="">
+                        </div>
                     </div>
                     <div class="card-customer">
                         <div class="backdrop">
