--- a/url/About/about.html
+++ b/url/About/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BVA - Industrie</title>
+    <title>BVA - Chi Siamo</title>
     <link rel="stylesheet" href="about.css">
     <link rel="shortcut icon" href="/BioVitalyAge-Website/includes/images/icone/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../../componenti.css">
